corpus/tests.txt
=====================
Empty docblock
=====================
/**
 *
 */
---
(document)

=====================
Docblock w/ no tags
=====================
/**
 * Just a comment
 *
 * more comment here
 */
---
(document (description (text) (text)))

=====================
Simple tags w/o description
=====================
/**
 * @api
 * @filesource
 */
---
(document
  (tag (tag_name))
  (tag (tag_name)))

=====================
Simple tags w/ optional description
=====================
/**
 * @ignore
 * @ignore description
 */
---
(document
  (tag (tag_name))
  (tag (tag_name) (description (text))))

=====================
Simple tags w/ required descriptions
=====================
/**
 * @category description
 * @copyright description
 * @todo description
 */
---
(document
  (tag (tag_name) (description (text)))
  (tag (tag_name) (description (text)))
  (tag (tag_name) (description (text))))

=====================
Simple inline tags
=====================
/**
 * {@inheritDoc}
 */
---
(document
  (description
    (inline_tag (tag_name))))

=====================
@author
=====================
/**
 * @author Foo Bar
 * @author F. Bar
 * @author F. Bar <f@bar.com>
 */
---
(document
  (tag (tag_name) (author_name))
  (tag (tag_name) (author_name))
  (tag (tag_name) (author_name) (email_address)))

=====================
@param
=====================
/**
 * @param $foo
 */
---
(document (tag (tag_name) (variable_name (name))))

=====================
@param w/ description
=====================
/**
 * @param $foo description
 */
---
(document
    (tag
      (tag_name)
      (variable_name (name))
      (description (text))))

=====================
@param w/ primitive type
=====================
/**
 * @param int $foo
 */
---
(document
    (tag
      (tag_name)
      (type_list (primitive_type))
      (variable_name (name))))

=====================
@param w/ primitive type & description
=====================
/**
 * @param int $foo description
 */
---
(document
    (tag
      (tag_name)
      (type_list (primitive_type))
      (variable_name (name))
      (description (text))))

=====================
@param w/ named type
=====================
/**
* @param MyClass $foo
*/
---
(document
    (tag
      (tag_name)
      (type_list (named_type (name)))
      (variable_name (name))))

=====================
@param w/ qualified type
=====================
/**
* @param MyPackage\MyClass $foo
*/
---
(document
    (tag
      (tag_name)
      (type_list
        (named_type (qualified_name
                      (namespace_name_as_prefix (namespace_name (name)))
                      (name)))
        )
      (variable_name (name))))

=====================
@api
=====================
/**
 * @api
 */
---
(document (tag (tag_name)))

=====================
Inline @var w/ primitive
=====================
/** @var int */
---
(document (tag (tag_name) (type_list (primitive_type))))

=====================
Inline @var
=====================
/** @var MyClass */
---
(document (tag (tag_name) (type_list (named_type (name)))))

=====================
@var w/ named type
=====================
/** @var MyNameSpace\MyClass */
---
(document
    (tag
      (tag_name)
      (type_list
        (named_type
          (qualified_name
            (namespace_name_as_prefix (namespace_name (name)))
            (name))))))

=====================
@var w/ primitive array type
=====================
/** @var int[] */
---
(document
    (tag
      (tag_name)
      (type_list (array_type (primitive_type)))))

=====================
@var w/ multidimensional primitive array type
=====================
/** @var int[][] */
---
(document
    (tag
      (tag_name)
      (type_list (array_type (primitive_type)))))

=====================
@var w/ multiple primitive array type
=====================
/** @var int[]|string[]|null */
---
(document
    (tag
      (tag_name)
      (type_list
        (array_type (primitive_type))
        (array_type (primitive_type))
        (primitive_type))))

=====================
@var w/ named array type
=====================
/** @var MyNameSpace\MyClass[] */
---
(document
    (tag
      (tag_name)
      (type_list
        (array_type
          (named_type
            (qualified_name
              (namespace_name_as_prefix (namespace_name (name)))
              (name)))))))

=====================
@var w/ multiple named array type (plus primitive)
=====================
/** @var MyNameSpace\MyClass[]|MyNameSpace\MyOtherClass[]|null */
---
(document
    (tag
      (tag_name)
      (type_list
        (array_type (named_type
          (qualified_name
            (namespace_name_as_prefix (namespace_name (name)))
            (name))))
        (array_type (named_type
          (qualified_name
            (namespace_name_as_prefix (namespace_name (name)))
            (name))))
        (primitive_type))))

=====================
@method
=====================
/** @method MyNameSpace\MyClass methodName(int $param) */
---
(document
    (tag
      (tag_name)
      (type_list
        (named_type
          (qualified_name
            (namespace_name_as_prefix (namespace_name (name)))
            (name))))
      (name)
      (parameters
        (parameter
          (type_list (primitive_type))
          (variable_name (name))))))

=====================
@deprecated, @since and @version
=====================
/**
 * @deprecated
 * @since 1.0
 * @version 1.2.3
 * @version 1.x
 * @version 1.*
 * @version 1.0-beta
 * @version blah blah
 * @since 1.2.3-beta blah blah
 */
---
(document
  (tag (tag_name))
  (tag (tag_name) (version))
  (tag (tag_name) (version))
  (tag (tag_name) (version))
  (tag (tag_name) (version))
  (tag (tag_name) (version))
  (tag (tag_name) (description (text)))
  (tag (tag_name) (version) (description (text))))
